# todo-server

./: .env  .pgsql  Cargo.toml  Makefile  README.md  sql.sql
client/: client.py  index.bash
lib/postgres/: docker-compose.yaml
migrations/2022-11-08-151254_todo/: up.sql
migrations/2022-11-09-015600_todos/: up.sql
server/: Cargo.toml
server/src/: db.rs  main.rs  schema.rs
server/src/models/: todo.rs
src/: config.rs  error.rs  main.rs  response.rs
